# opti_chat_multi_agent

./: .gitignore  MAS_SPEC.md  join_code.sh  pyproject.toml  requirements.txt
history/: trace_20260104_100034.jsonl  trace_20260104_102303.jsonl  trace_20260104_103435.jsonl  trace_20260104_110513.jsonl
src/organizer/: __main__.py  cli.py
src/organizer/agents/: __init__.py  coordinator.py  llm.py  planner.py  recovery.py  stays.py  weather.py
src/organizer/core/: __init__.py  agent.py  capabilities.py  decision.py  errors.py  fixplan.py  history_logger.py  memory.py  orchestrator.py  preferences.py  preferences_store.py  registry.py  replay.py  retry.py  task.py  tool.py  tool_runner.py  trace.py  trace_logger.py  types.py
src/organizer/tools/: __init__.py  fake_apis.py
src/organizer/tools/real/: __init__.py  housing_stub.py  open_meteo.py  openai_city_normalizer.py  openai_recovery.py  (+1 more)
tests/: test_cli_scenarios.py  test_coordinator_decision.py  test_fake_tools.py  test_hello.py  test_history_logging.py  test_import_no_circular_openai_recovery.py  test_memory_condensation.py  test_models_serialization.py  test_openai_recovery_integration.py  test_orchestrator.py  test_orchestrator_coordinator_routing.py  test_orchestrator_team_trace.py  test_orchestrator_user_history.py  test_planner.py  test_preferences_store.py  test_recovery_agent_v1.py  test_recovery_agent_v2.py  test_registry.py  test_replay_from_events.py  test_retry_policy.py  test_tool_error_and_trace.py
tests/integration/: test_open_meteo_integration.py  test_ticketmaster_integration.py
